--- a/CB-BALCK_VOUCHER-SHIRT.html
+++ b/CB-BALCK_VOUCHER-SHIRT.html
@@ -20,7 +20,8 @@
   </style>
 </head>
 <body>
-  <img src="CB-BALCK_VOUCHER-SHIRT.png" alt="Voucher">
+  <img src="https://github.com/davidkimmm/Couponzforkb/blob/main/CB-BALCK_VOUCHER-SHIRT.png?raw=true" alt="Voucher">
 </body>
 
 </html>
+
